; ModuleID = '/home/carl/AnghaBench/libevent/test/extr_regress_ssl.c_init_ssl.c'
source_filename = "/home/carl/AnghaBench/libevent/test/extr_regress_ssl.c_init_ssl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@OPENSSL_VERSION_NUMBER = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [5 x i8] c"WARN\00", align 1
@.str.1 = private unnamed_addr constant [69 x i8] c"Version mismatch for openssl: compiled with %lx but running with %lx\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @init_ssl() #0 {
  %1 = call i32 (...) @SSL_library_init()
  %2 = call i32 (...) @ERR_load_crypto_strings()
  %3 = call i32 (...) @SSL_load_error_strings()
  %4 = call i32 (...) @OpenSSL_add_all_algorithms()
  %5 = call i64 (...) @SSLeay()
  %6 = load i64, i64* @OPENSSL_VERSION_NUMBER, align 8
  %7 = icmp ne i64 %5, %6
  br i1 %7, label %8, label %13

8:                                                ; preds = %0
  %9 = load i64, i64* @OPENSSL_VERSION_NUMBER, align 8
  %10 = call i64 (...) @SSLeay()
  %11 = inttoptr i64 %10 to i8*
  %12 = call i32 @TT_DECLARE(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i8* %11)
  br label %13

13:                                               ; preds = %8, %0
  ret void
}

declare dso_local i32 @SSL_library_init(...) #1

declare dso_local i32 @ERR_load_crypto_strings(...) #1

declare dso_local i32 @SSL_load_error_strings(...) #1

declare dso_local i32 @OpenSSL_add_all_algorithms(...) #1

declare dso_local i64 @SSLeay(...) #1

declare dso_local i32 @TT_DECLARE(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
